# falpipe.ai

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  NEW_APP.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
documentation/: quickstart-img2img.md  quickstart-img2video.md  quickstart.md
documentation/scripts/: quickstart_script_001.md
models/: flux.json  gpt-image-2.json  happy-horse.json  kling3-image.json  kling3.json  nano-banana-2.json  nano-banana-pro.json  topaz.json  veo3.json
models/fal/: flux.json  gpt-image-2.json  happy-horse.json  kling3-image.json  kling3.json  nano-banana-2.json  nano-banana-pro.json  seedance-2.json  topaz.json  veo3.json
models/replicate/: flux-schnell.json  flux.json  nano-banana-2.json  nano-banana-pro.json  seedance-2.json  topaz.json
scripts/: release.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: domain.rs  error.rs  lib.rs  main.rs  paths.rs
src-tauri/src/commands/: config.rs  download.rs  media.rs  metadata.rs  mod.rs  models.rs  session.rs
src/components/: ClipMediaPicker.tsx  CropMode.tsx  DrawMode.tsx  ErrorPopup.tsx  ExportModal.tsx  Gallery.tsx  GalleryColumn.tsx  IconBtn.tsx  ImageZoomModal.tsx  InlinePrompt.tsx  LatestImageColumn.tsx  LlmPromptModal.tsx  LogWindow.tsx  ModelPicker.tsx  ModelSettingsColumn.tsx  PathContextMenu.tsx  PromptColumn.tsx  RefImagesColumn.tsx  RenameImageModal.tsx  ResizeBar.tsx  RoleMenu.tsx  RunColumn.tsx  SessionBar.tsx  SettingsDialog.tsx  (+9 more)
(+23 files in other folders)
