[package]
name = "falocai"
version = "0.1.0"
description = "faLOCai — fal.ai desktop pipeline"
authors = ["Piotr"]
edition = "2021"

[lib]
name = "falocai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "time"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
